 357.	[bug]		The zone file parser crashed when seeing a quoted
			$INCLUDE.

 356.	[cleanup]	isc_task_send no longer requires event->sender to
			be non-null.

 355.	[func]		Added isc_dir_createunique(), similar to mkdtemp().

 354.	[doc]		Man pages for the dnssec tools are now included in
			the distribution, in doc/man/dnssec.

 353.	[bug]		double increment in lwres/gethost.c:copytobuf().
			(RT# 187)

 352.	[bug]		Race condition in dns_client_t startup could cause
			an assertion failure.

 351.	[bug]		Constructing a response with rcode SERVFAIL to a TSIG
			signed query could crash the server.

 350.	[bug]		Also-notify lists specified in the global options
			block were not correctly reference counted, causing
			a memory leak.

 349.	[bug]		Processing a query with the CD bit set now works
			as expected.

 348.	[func]		New named.conf boolean values 'glue-from-auth' and
			'glue-from-cache' now supported in view and global
			options statement.

 347.	[bug]		Don't crash if when an argument is left off
			options in dig.

 346.	[func]		Add support for .digrc config file, in the
			user's current directory

 345.	[bug]		Large-scale changes/cleanups to dig:
			* Significantly improve structure handling
			* Don't pre-load entire batch files
			* Add name/rr counting/limiting
			* Fix SIGINT handling
			* Shorten timeouts to match v8's behavior

 344.	[bug]		When shutting down, lwresd sometimes tried
			to shut down its client tasks twice, 
			triggering an assertion.

 343.	[bug]		Although zone maintenance SOA queries and
			notify requests were signed with TSIG keys
			when configured for the server in case,
			the TSIG was not verified on the response.

 342.	[bug]		The wrong name was being passed to
			dns_name_dup() when generating a TSIG
			key using TKEY.

 341.	[func]		Support 'key' clause in named.conf zone masters 
			statement:

				masters { 
					10.0.0.1 port 666 key "foo";
					10.0.0.2 ;
				};
