@@ -13,7 +13,7 @@
 .\" NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION
 .\" WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\" 
-.\" $Id: dnssec-signkey.8,v 1.6 2000/07/27 09:42:34 tale Exp $
+.\" $Id: dnssec-signkey.8,v 1.7 2000/07/31 15:28:20 bwelling Exp $
 .\" 
 .Dd Jun 30, 2000
 .Dt DNSSEC-SIGNKEY 8
@@ -34,7 +34,7 @@
 .Nm dnssec-signkey
 is used to sign a key set for a child zone.
 Typically this would be provided by a 
-.Ar .keyset
+.Ar keyset
 file generated by
 .Xr dnssec-makekeyset 8 .
 This provides a mechanism for a DNSSEC-aware zone to sign the keys of
@@ -43,7 +43,7 @@ The child zone's key set gets signed with the zone keys for its parent
 zone.
 .Ar keyset
 will be the pathname of the child zone's
-.Ar .keyset
+.Ar keyset
 file.
 Each
 .Ar keyfile
@@ -102,7 +102,7 @@ The default level is zero.
 When
 .Nm dnssec-signkey
 completes successfully, it generates a file called
-.Ar nnnn.signedkey
+.Ar signedkey-nnnn.
 containing the signed keys for child zone
 .Ar nnnn .
 The keys from the
@@ -125,13 +125,13 @@ The DNS administrator for a DNSSEC-aware
 zone would use the following command to make
 .Nm dnssec-signkey
 sign the
-.Ar .keyset
+.Ar keyset
 file for
 .Dv example.com
 created in the example shown in the man page for
 .Xr dnssec-makekeyset 8 :
 .Pp
-.Dl # dnssec-signkey example.com.keyset Kcom.+003+51944
+.Dl # dnssec-signkey keyset-example.com. Kcom.+003+51944
 .Pp
 where
 .Dv Kcom.+003+51944
@@ -143,7 +143,7 @@ zone.
 .Pp
 .Nm dnssec-signkey
 will produce a file called
-.Dv example.com.signedkey
+.Dv signedkey-example.com.
 which has the keys for
 .Dv example.com
 signed by the
